# paralela_openmp

./: CMakeLists.txt  calculoPI.cpp  ejercicio.cpp  openmp01.cpp  openmp02.cpp
